--- a/.gitignore
+++ b/.gitignore
@@ -170,4 +170,5 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-secret_api_keys.py
+#secret_api_keys.py
+huggingface_api_key = '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'
